Adicionando o spring security.

--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,11 @@
 			<version>${mapstruct.version}</version>
 		</dependency>
 
-
+		<!-- SPRINGSECURITY -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
