Configurando o lembrar-me na página de login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,9 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# THymleaf
+# Thymleaf
 spring.thymeleaf.cache=false
+
+# Lembrar-me
+br.com.treinaweb.ediaristas.rememberMe.key=Gt]Pe79#n'i+,0f]2Z2}XJ$}d33Y]z$dEKVdzn}}]>~]w^oLA3|qj;t3ML)Gt}z
+br.com.treinaweb.ediaristas.rememberMe.validtySeconds=172800
